Fix - navbar when on mobile showing in the middle of the screen

--- a/app/routes/components/Header.module.css
+++ b/app/routes/components/Header.module.css
@@ -79,23 +79,13 @@
   }
 
   .navigationOpen {
-    height: auto;
-    min-height: 100vh;
+    margin-top: 20px;
     width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
   }
 
   .navigationOpen ul {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 100%;
   }
 
   .navigationOpen li {
